--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <tr class="t2">
                     <td width="20% " height="120"><img src="image/ruled8.png" width="100" height="100"></td>
                     <td width="20% " height="120">Ruled8 Live</td>
-                    <td width="60% " height="120"><a href="itms-services://?action=download-manifest&url=https://dl.dropbox.com/s/vhkdmk2w2ubqooa/x9_th.plist">Tap To Download</a></td>
+                    <td width="60% " height="120" ><a href="itms-services://?action=download-manifest&url=https://dl.dropbox.com/s/vhkdmk2w2ubqooa/x9_th.plist">Tap To Download</a>(Dropbox)<br><a href="itms-services://?action=download-manifest&url=https://dl.dropbox.com/s/j6f8z12k3034k8i/x9_th_ftp.plist">Tap To Download</a>(FTP)</td>
                 </tr>
             </table>
             <br>
@@ -59,7 +59,7 @@
                     <td colspan="3">
                         <p class="t2" style="text-align:left;"> ---- 2023/07/06 ----</p>
                         <p class="t2" style="text-align:left;"> v1.0.0</p>
-                        <p class="t2" style="text-align:left;"> 1.程式架構替換/p>
+                        <p class="t2" style="text-align:left;"> 1.程式架構替換</p>
                         <p class="t2" style="text-align:left;"> 2.測試版域名選擇頁面修改</p>
                         <p class="t2" style="text-align:left;"> 3.測試版新增顯示語言切換</p>
                         <p class="t2" style="text-align:left;"> 4.新增激活機制</p>
