--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <tr class="t2">
                     <td width="20% " height="120"><img src="image/ruled8.png" width="100" height="100"></td>
                     <td width="20% " height="120">Ruled8 Live</td>
-                    <td width="60% " height="120" ><a href="itms-services://?action=download-manifest&url=https://dl.dropbox.com/s/vhkdmk2w2ubqooa/x9_th.plist">Tap To Download</a>(Dropbox)<br><a href="itms-services://?action=download-manifest&url=https://dl.dropbox.com/s/j6f8z12k3034k8i/x9_th_ftp.plist">Tap To Download</a>(FTP)</td>
+                    <td width="60% " height="120" ><a href="itms-services://?action=download-manifest&url=https://dl.dropbox.com/s/vhkdmk2w2ubqooa/x9_th.plist">Tap To Download</a>(Dropbox)</td>
                 </tr>
             </table>
             <br>
