--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
                 <tr class="t2">
                     <td colspan="3">
                         <p class="t2" style="text-align:left;"> ---- 2023/07/06 ----</p>
-                        <p class="t2" style="text-align:left;"> v1.0.0</p>
-                        <p class="t2" style="text-align:left;"> 1.程式架構替換</p>
-                        <p class="t2" style="text-align:left;"> 2.測試版域名選擇頁面修改</p>
-                        <p class="t2" style="text-align:left;"> 3.測試版新增顯示語言切換</p>
-                        <p class="t2" style="text-align:left;"> 4.新增激活機制</p>
-                        <p class="t2" style="text-align:left;"> 5.Jira bug 151、227、228、256</p>
+                        <p class="t2" style="text-align:left;"> v1.0.0(Build 9)</p>
+			<p class="t2" style="text-align:left;"> 1.遊客id修復</p>                        
+			<p class="t2" style="text-align:left;"> 2.程式架構替換</p>
+                        <p class="t2" style="text-align:left;"> 3.測試版域名選擇頁面修改</p>
+                        <p class="t2" style="text-align:left;"> 4.測試版新增顯示語言切換</p>
+                        <p class="t2" style="text-align:left;"> 5.新增激活機制</p>
+                        <p class="t2" style="text-align:left;"> 6.Jira bug 151、227、228、256</p>
                         
                     </td>
                 </tr>
