--- a/index.html
+++ b/index.html
@@ -57,14 +57,16 @@
                 </tr>
                 <tr class="t2">
                     <td colspan="3">
-                        <p class="t2" style="text-align:left;"> ---- 2023/07/06 ----</p>
-                        <p class="t2" style="text-align:left;"> v1.0.0(Build 9)</p>
-			<p class="t2" style="text-align:left;"> 1.遊客id修復</p>                        
-			<p class="t2" style="text-align:left;"> 2.程式架構替換</p>
-                        <p class="t2" style="text-align:left;"> 3.測試版域名選擇頁面修改</p>
-                        <p class="t2" style="text-align:left;"> 4.測試版新增顯示語言切換</p>
-                        <p class="t2" style="text-align:left;"> 5.新增激活機制</p>
-                        <p class="t2" style="text-align:left;"> 6.Jira bug 151、227、228、256</p>
+                        <p class="t2" style="text-align:left;"> ---- 2023/07/07 ----</p>
+                        <p class="t2" style="text-align:left;"> v1.0.0(Build 10)</p>
+			<p class="t2" style="text-align:left;"> 1.修復泰國伺服器，登入帳號crash</p>
+			<p class="t2" style="text-align:left;"> 2.修復第一次進入主播私聊沒有內容</p>
+			<p class="t2" style="text-align:left;"> 3.遊客id修復</p>                        
+			<p class="t2" style="text-align:left;"> 4.程式架構替換</p>
+                        <p class="t2" style="text-align:left;"> 5.測試版域名選擇頁面修改</p>
+                        <p class="t2" style="text-align:left;"> 6.測試版新增顯示語言切換</p>
+                        <p class="t2" style="text-align:left;"> 7.新增激活機制</p>
+                        <p class="t2" style="text-align:left;"> 8.Jira bug 151、227、228、256</p>
                         
                     </td>
                 </tr>
