--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
                 </tr>
                 <tr class="t2">
                     <td colspan="3">
+                        <p class="t2" style="text-align:left;"> ---- 2023/07/11 ----</p>
+                        <p class="t2" style="text-align:left;"> v1.0.0(Build 11)</p>
+			<p class="t2" style="text-align:left;"> 1.修復直播中左下角浮水印圖片過大</p>
+			<p class="t2" style="text-align:left;"> 2.修復等待直播倒數畫面背景顏色錯誤</p>
+                    </td>
+                </tr>
+		<tr class="t2">
+                    <td colspan="3">
                         <p class="t2" style="text-align:left;"> ---- 2023/07/07 ----</p>
                         <p class="t2" style="text-align:left;"> v1.0.0(Build 10)</p>
 			<p class="t2" style="text-align:left;"> 1.修復泰國伺服器，登入帳號crash</p>
@@ -67,7 +75,6 @@
                         <p class="t2" style="text-align:left;"> 6.測試版新增顯示語言切換</p>
                         <p class="t2" style="text-align:left;"> 7.新增激活機制</p>
                         <p class="t2" style="text-align:left;"> 8.Jira bug 151、227、228、256</p>
-                        
                     </td>
                 </tr>
             </table>
