--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
                 <tr class="t1">
                     <td colspan="3" >Release Note</td>
                 </tr>
+		 <tr class="t2">
+                    <td colspan="3">
+                        <p class="t2" style="text-align:left;"> ---- 2023/07/12 ----</p>
+                        <p class="t2" style="text-align:left;"> v1.0.0(Build 12)</p>
+			<p class="t2" style="text-align:left;"> 1.僅支援iOS13以上的版本</p>
+			<p class="t2" style="text-align:left;"> 2.關閉深色模式</p>
+                    </td>
+                </tr>
                 <tr class="t2">
                     <td colspan="3">
                         <p class="t2" style="text-align:left;"> ---- 2023/07/11 ----</p>
