--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
                 <tr class="t1">
                     <td colspan="3" >Release Note</td>
                 </tr>
+		  <tr class="t2">
+                    <td colspan="3">
+                        <p class="t2" style="text-align:left;"> ---- 2023/07/18 ----</p>
+                        <p class="t2" style="text-align:left;"> v1.0.0(Build 15)</p>
+			<p class="t2" style="text-align:left;"> 1.新增註冊完成，直接登入</p>
+                    </td>
+                 </tr>
 		 <tr class="t2">
                     <td colspan="3">
                         <p class="t2" style="text-align:left;"> ---- 2023/07/12 ----</p>
