--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
                 </tr>
 		  <tr class="t2">
                     <td colspan="3">
+                        <p class="t2" style="text-align:left;"> ---- 2023/07/20 ----</p>
+                        <p class="t2" style="text-align:left;"> v1.0.0(Build 16)</p>
+			<p class="t2" style="text-align:left;"> 1.修復用戶繼承渠道後自動登入，如登出的話回到直播間內，會出現主播資料有資料但聊天TAB無資料的情況</p>
+                    </td>
+                 </tr>
+		  <tr class="t2">
+                    <td colspan="3">
                         <p class="t2" style="text-align:left;"> ---- 2023/07/18 ----</p>
                         <p class="t2" style="text-align:left;"> v1.0.0(Build 15)</p>
 			<p class="t2" style="text-align:left;"> 1.新增註冊完成，直接登入</p>
